--- a/index.html
+++ b/index.html
@@ -1,111 +1,75 @@
-<!DOCTYPE HTML>
-<!--
-    Customized by Benjamin Gopoyan, aka DataMind Studios
-    Personalized version based on Massively by HTML5 UP
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-    <head>
-        <title>Benjamin Gopoyan - DataMind Studios</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <link rel="stylesheet" href="assets/css/main.css" />
-        <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    </head>
-    <body class="is-preload">
+<!-- Main -->
+<div id="main">
+    <!-- Featured Post -->
+    <article class="post featured">
+        <header class="major">
+            <span class="date">April 25, 2017</span>
+            <h2><a href="#">Discover the World<br />
+            of Data and Design</a></h2>
+            <p>Explore the intersection of creativity and analytics. Dive into a world crafted with precision and passion by Benjamin Gopoyan.</p>
+        </header>
+        <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+        <ul class="actions special">
+            <li><a href="#" class="button large">Learn More</a></li>
+        </ul>
+    </article>
 
-        <!-- Wrapper -->
-        <div id="wrapper" class="fade-in">
-
-            <!-- Intro -->
-            <div id="intro">
-                <h1>Welcome to<br />
-                DataMind Studios</h1>
-                <p>Crafted by Benjamin Gopoyan, a web developer and data analyst with a focus on data governance. Explore the digital world through the lens of creativity and analytics.</p>
-                <ul class="actions">
-                    <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-                </ul>
+    <!-- Showcase Sites Carousel -->
+    <section class="posts">
+        <h2>Featured Sites</h2>
+        <div id="siteCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <a href="https://budsminigolf.com" target="_blank"><img src="images/Screenshot 2023-11-25 173132.png" class="d-block w-100" alt="Buds Mini Golf"></a>
+                </div>
+                <div class="carousel-item">
+                    <a href="https://lunalogistics.net" target="_blank"><img src="path/to/lunalogistics-screenshot.jpg" class="d-block w-100" alt="Luna Logistics"></a>
+                </div>
+                <div class="carousel-item">
+                    <a href="https://downcapeplungepool.com" target="_blank"><img src="images/Screenshot 2023-11-25 173155.png" class="d-block w-100" alt="Downcape Plunge Pool"></a>
+                </div>
             </div>
-
-            <!-- Header -->
-            <header id="header">
-                <a href="index.html" class="logo">DataMind Studios</a>
-            </header>
-
-            <!-- Nav -->
-            <nav id="nav">
-                <ul class="links">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="generic.html">Generic Page</a></li>
-                    <li><a href="elements.html">Elements Reference</a></li>
-                </ul>
-                <ul class="icons">
-                    <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                    <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                </ul>
-            </nav>
-
-            <!-- Main -->
-            <div id="main">
-
-                <!-- Featured Post -->
-                <article class="post featured">
-                    <header class="major">
-                        <span class="date">April 25, 2017</span>
-                        <h2><a href="#">Discover the World<br />
-                        of Data and Design</a></h2>
-                        <p>Explore the intersection of creativity and analytics. Dive into a world crafted with precision and passion by Benjamin Gopoyan.</p>
-                    </header>
-                    <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-                    <ul class="actions special">
-                        <li><a href="#" class="button large">Learn More</a></li>
-                    </ul>
-                </article>
-
-                <!-- Posts -->
-                <section class="posts">
-                    <!-- Add your personalized posts here -->
-                </section>
-
-                <!-- Footer -->
-                <footer>
-                    <div class="pagination">
-                        <!--<a href="#" class="previous">Prev</a>-->
-                        <a href="#" class="page active">1</a>
-                        <a href="#" class="page">2</a>
-                        <a href="#" class="page">3</a>
-                        <span class="extra">&hellip;</span>
-                        <a href="#" class="page">8</a>
-                        <a href="#" class="page">9</a>
-                        <a href="#" class="page">10</a>
-                        <a href="#" class="next">Next</a>
-                    </div>
-                </footer>
-
-            </div>
-
-            <!-- Footer -->
-            <footer id="footer">
-                <!-- Add your personalized contact and social information here -->
-            </footer>
-
-            <!-- Copyright -->
-            <div id="copyright">
-                <ul><li>&copy; Benjamin Gopoyan</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-            </div>
-
+            <a class="carousel-control-prev" href="#siteCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#siteCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
+    </section>
 
-        <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.scrollex.min.js"></script>
-        <script src="assets/js/jquery.scrolly.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
+    <!-- Posts (if any) -->
+    <section class="posts">
+        <!-- Add your personalized posts here -->
+    </section>
 
-    </body>
-</html>
+    <!-- Footer -->
+    <footer>
+        <div class="pagination">
+            <!--<a href="#" class="previous">Prev</a>-->
+            <a href="#" class="page active">1</a>
+            <a href="#" class="page">2</a>
+            <a href="#" class="page">3</a>
+            <span class="extra">&hellip;</span>
+            <a href="#" class="page">8</a>
+            <a href="#" class="page">9</a>
+            <a href="#" class="page">10</a>
+            <a href="#" class="next">Next</a>
+        </div>
+    </footer>
+</div>
+
+<!-- Footer -->
+<footer id="footer">
+    <!-- Add your personalized contact and social information here -->
+    <section>
+        <h3>Contact Me</h3>
+        <ul class="icons">
+            <li><a href="https://github.com/bengopoyan" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+            <li><a href="https://linkedin.com/in/benjamingopoyan" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        </ul>
+        <a href="mailto:gopoyanb@gmail.com" class="button">Email Me</a> <!-- Replace with your email -->
+    </section>
+</footer>
