--- a/index.html
+++ b/index.html
@@ -87,20 +87,10 @@
             </div>
 
             <!-- Footer -->
-           <footer id="footer">
-    <section>
-        <h3>Contact Me</h3>
-        <ul class="icons">
-            <!-- GitHub Icon and Link -->
-            <li><a href="https://github.com/bengopoyan" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-            
-            <!-- LinkedIn Icon and Link -->
-            <li><a href="https://linkedin.com/in/benjamingopoyan" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-        </ul>
-        <!-- Add any additional contact information or buttons here -->
-        <a href="mailto:your.email@example.com" class="button">Email Me</a> <!-- Replace with your email -->
-    </section>
-</footer>
+            <footer id="footer">
+                <!-- Add your personalized contact and social information here -->
+            </footer>
+
             <!-- Copyright -->
             <div id="copyright">
                 <ul><li>&copy; Benjamin Gopoyan</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
