--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <nav id="nav">
                 <ul class="links">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="generic.html">Generic Page</a></li>
-                    <li><a href="elements.html">Elements Reference</a></li>
+
                 </ul>
                 <ul class="icons">
                     <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -53,12 +52,12 @@
                 <!-- Featured Post -->
                 <article class="post featured">
                     <header class="major">
-                        <span class="date">April 25, 2017</span>
+                        <span class="date">November, 25th 2023</span>
                         <h2><a href="#">Discover the World<br />
                         of Data and Design</a></h2>
-                        <p>Explore the intersection of creativity and analytics. Dive into a world crafted with precision and passion by Benjamin Gopoyan.</p>
+                        <p>Explore the intersection of creativity and analytics. Dive into a world crafted with precision and passion by Benjamin Gopoyan. </p>
                     </header>
-                    <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+                    <a href="#" class="image main"><img src="images/images/1694720288790.jpg" alt="" /></a>
                     <ul class="actions special">
                         <li><a href="#" class="button large">Learn More</a></li>
                     </ul>
@@ -87,9 +86,19 @@
             </div>
 
             <!-- Footer -->
-            <footer id="footer">
-                <!-- Add your personalized contact and social information here -->
-            </footer>
+<footer id="footer">
+    <!-- Add your personalized contact and social information here -->
+    <section>
+        <h3>Contact Me</h3>
+        <ul class="icons">
+            <li><a href="https://github.com/bengopoyan" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+            <li><a href="https://linkedin.com/in/benjamingopoyan" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        </ul>
+        <a href="mailto:gopoyanb@gmail.com" class="button">Email Me</a> <!-- Replace with your email -->
+    </section>
+</footer>
+
+
 
             <!-- Copyright -->
             <div id="copyright">
