--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <header class="major">
                         <span class="date">November, 25th 2023</span>
                         <h2><a href="#">Discover the World<br />
-                        of Data and Design</a></h2>
+                        of Design and Data</a></h2>
                         <p>Explore the intersection of creativity and analytics. Dive into a world crafted with precision and passion by Benjamin Gopoyan. </p>
                     </header>
                     <a href="#" class="image main"><img src="images/images/1694720288790.jpg" alt="" /></a>
