--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <nav id="nav">
                 <ul class="links">
                     <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="blog.html">Blog</a></li> <!-- Added Blog link -->
                     <li><a href="gallery.html">Gallery</a></li> <!-- Added Gallery link -->
                 </ul>
                 <ul class="icons">
@@ -106,4 +107,5 @@
         <script src="assets/js/main.js"></script>
 
     </body>
+</html>
 </html>
