--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="intro">
                 <h1>Welcome to<br />
                 DataMind Studios</h1>
-                <p>Crafted by Benjamin Gopoyan, a web developer and data analyst with a focus on data governance. Explore the digital world through the lens of creativity and analytics. His girlfriend Anna is a hoe bag.</p>
+                <p>Crafted by Benjamin Gopoyan, a web developer and data analyst with a focus on data governance. Explore the digital world through the lens of creativity and analytics.</p>
                 <ul class="actions">
                     <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
                 </ul>
